--- a/src/main/webapp/include/template.xhtml
+++ b/src/main/webapp/include/template.xhtml
@@ -14,23 +14,23 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes"/>
-    <link rel="icon" sizes="192x192" href="/monitoria-web/imagens/android-desktop.png"/>
+    <link rel="icon" sizes="192x192" href="/monitoria/imagens/android-desktop.png"/>
 
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="apple-mobile-web-app-title" content="Material Design Lite"/>
-    <link rel="apple-touch-icon-precomposed" href="/monitoria-web/imagens/ios-desktop.png"/>
+    <link rel="apple-touch-icon-precomposed" href="/monitoria/imagens/ios-desktop.png"/>
 
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png"/>
     <meta name="msapplication-TileColor" content="#3372DF"/>
 
-    <link rel="shortcut icon" href="/monitoria-web/imagens/favicon.png"/>
+    <link rel="shortcut icon" href="/monitoria/imagens/favicon.png"/>
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="/monitoria-web/css/material.min.css"/>
-    <link rel="stylesheet" href="/monitoria-web/css/styles.css"/>
+    <link rel="stylesheet" href="/monitoria/css/material.min.css"/>
+    <link rel="stylesheet" href="/monitoria/css/styles.css"/>
 		    <style>
 		    #view-source {
 		      position: fixed;
@@ -61,16 +61,14 @@
           <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
             <i class="material-icons">more_vert</i>
           </button>
-          <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" >
-            <li class="mdl-menu__item">About</li>
-            <li class="mdl-menu__item">Contact</li>
-            <li class="mdl-menu__item">Legal information</li>
+          <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn" >
+            <li class="mdl-menu__item">Configurações</li>
           </ul>
         </div>
       </header>
       <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-          <img src="/monitoria-web/imagens/user.jpg" class="demo-avatar"/>
+          <img src="/monitoria/imagens/user.jpg" class="demo-avatar"/>
           <div class="demo-avatar-dropdown">
             <span>hello@example.com</span>
             <div class="mdl-layout-spacer"></div>
@@ -86,12 +84,11 @@
           </div>
         </header>
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Inbox</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Trash</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Spam</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Duvidas</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Minhas Duvidas</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Notificações</a>
           <div class="mdl-layout-spacer"></div>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
+          <a class="mdl-navigation__link" href=""><span class="visuallyhidden">Log-Out</span></a>
         </nav>
       </div>
       <div class="mdl-layout__content mdl-color--grey-100">
@@ -102,6 +99,6 @@
         </div>
       </div>
     </div>
-    <script src="/monitoria-web/js/material.min.js"></script>
+    <script src="/monitoria/js/material.min.js"></script>
   </h:body>
 </html>
