--- a/src/main/webapp/include/template.xhtml
+++ b/src/main/webapp/include/template.xhtml
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="/monitoria/css/material.min.css"/>
     <link rel="stylesheet" href="/monitoria/css/styles.css"/>
+    <link rel="stylesheet" href="/monitoria/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="/monitoria/css/bootstrap.min.css"/>
 		    <style>
 		    #view-source {
 		      position: fixed;
@@ -58,39 +60,33 @@
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">Monitoria</span>
           <div class="mdl-layout-spacer"></div>
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-            <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
-              <i class="material-icons">search</i>
-            </label>
-            <div class="mdl-textfield__expandable-holder">
-              <input class="mdl-textfield__input" type="text" id="search"/>
-              <label class="mdl-textfield__label" for="search">Enter your query...</label>
-            </div>
-          </div>
-          <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
-            <i class="material-icons">more_vert</i>
+          <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" title="Sair do Sistema.">
+            <i class="fa fa-sign-out" aria-hidden="true"/>
           </button>
-          <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn" >
-            <li class="mdl-menu__item">Configurações</li>
-          </ul>
         </div>
       </header>
       <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-          <img src="/monitoria/imagens/user.jpg" class="demo-avatar"/>
+        <div class="row">
+        <div class="col-sm-3">
+        	<img src="/monitoria/imagens/user.jpg" class="demo-avatar"/>
+        </div>
+        <div class="col-sm-6">
+        	<p>#{perfilMBean.obj.pessoa.nome} #{perfilMBean.obj.pessoa.matricula}</p>
+        </div>
+        </div>
           <div class="demo-avatar-dropdown">
-            <span><h:outputLabel value="#{perfilMBean.obj.pessoa.nome}" /></span>
+            <span><h:outputLabel value="#{perfilMBean.obj.pessoa.email}" /></span>
             <div class="mdl-layout-spacer"></div>
             <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" style="float:right;">
               <i class="material-icons" role="presentation">arrow_drop_down</i>
               <span class="visuallyhidden">Accounts</span>
             </button>
             <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-              <li class="mdl-menu__item">#{perfilMBean.obj.pessoa.email}</li>
-              <li class="mdl-menu__item">#{perfilMBean.obj.pessoa.matricula}</li>
-              <li class="mdl-menu__item">#{perfilMBean.obj.curso}</li>
+			  <li class="mdl-menu__item">Configurações</li>
               <!-- <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li> -->
             </ul>
+
           </div>
         </header>
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800" style="text-align: center;">
