--- a/src/main/webapp/include/template.xhtml
+++ b/src/main/webapp/include/template.xhtml
@@ -3,7 +3,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:mp="http://primefaces.org/ui/material">
 
 <h:head>
     <meta charset="utf-8"/>
@@ -35,34 +36,60 @@
     <link rel="stylesheet" href="/monitoria/css/bootstrap.min.css"/>
 		    <style>
 		    #view-source {
-		      position: fixed;
-		      display: block;
-		      right: 0;
-		      bottom: 0;
-		      margin-right: 40px;
-		      margin-bottom: 40px;
-		      z-index: 900;
+		      position: fixed !important;
+		      display: block !important;
+		      right: 0 !important;
+		      bottom: 0 !important;
+		      margin-right: 40px !important;
+		      margin-bottom: 40px !important;
+		      z-index: 900 !important;
 		    }
 		    hr.menu {    
-		    	display: block;
-				height: 1px;
-				border: 0;
-				border-top: 1px solid #263238;
-				margin: 1em 0;
-				padding: 0;
-				background-color: #263238;
+		    	display: block !important;
+				height: 1px !important;
+				border: 0 !important;
+				border-top: 1px solid #263238 !important;
+				margin: 1em 0 !important;
+				padding: 0 !important;
+				background-color: #263238 !important;
     		}
-		    </style>
+			.demo-card-wide.mdl-card {
+			  width: 80%;
+			  margin: 20px;	  
+			}
+			.demo-card-wide > .mdl-card__title {
+			  color: #fff;
+			  height: 176px;
+			  background: url('../assets/demos/welcome_card.jpg') center / cover;
+			}
+			.demo-card-wide > .mdl-card__menu {
+			  color: #fff;
+			}
+			.mdl-card__supporting-text{
+			    color: rgba(0,0,0,1);
+		    	font-size: 14px;
+		    	line-height: 1.38;
+		    	overflow: hidden;
+		    	padding: 0 20 20 20;
+		    	width: 100% !important;
+		    }
+		    .demo-card-wide > .mdl-card__title{
+		    	height: 65px !important;
+		    }
+			</style>
   </h:head>
   <h:body>
+  
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">Monitoria</span>
           <div class="mdl-layout-spacer"></div>
-          <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" title="Sair do Sistema.">
+          <h:form prependId="false">
+          <h:commandLink action="#{loginMBean.logOut()}"  class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" title="Sair do Sistema.">
             <i class="fa fa-sign-out" aria-hidden="true"/>
-          </button>
+          </h:commandLink>
+          </h:form>
         </div>
       </header>
       <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
@@ -89,19 +116,24 @@
 
           </div>
         </header>
+        <h:form prependId="false">
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800" style="text-align: center;">
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Duvidas</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Minhas Duvidas</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Notificações</a>
+        <!-- https://design.google.com/icons/ -->
+       		<h:commandLink action="#{duvidaMBean.list()}" class="mdl-navigation__link" immediate="true">
+				<i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">sentiment_neutral</i>Duvidas
+			</h:commandLink>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">create</i>Minhas Duvidas</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">notifications</i>Notificações</a>
           <hr class="menu"/>
           <span style="color:#6f8591; !important;text-transform: uppercase;"><b>#{perfilMBean.obj.papel.descricao}</b></span>
           <h:form prependId="false">
 	          <ui:repeat var="diciplina" value="#{perfilMBean.obj.diciplinas}">
-	          	<h:commandLink action="#" value="" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>#{diciplina.codigo}</h:commandLink>
+	          	<h:commandLink action="#" value="" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">school</i>#{diciplina.codigo}</h:commandLink>
 	          </ui:repeat>
           </h:form>
           <!-- <a class="mdl-navigation__link" href=""><span class="visuallyhidden">Log-Out</span></a> -->
         </nav>
+        </h:form>
       </div>
       <div class="mdl-layout__content mdl-color--grey-100">
         <div class="mdl-grid demo-content">
