--- a/src/main/webapp/include/template.xhtml
+++ b/src/main/webapp/include/template.xhtml
@@ -87,7 +87,9 @@
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Monitoria</span>
+        <h:form prependId="false">
+          <h:commandLink action="#{duvidaMBean.list()}" style="text-decoration: none !important;"><span class="mdl-layout-title">Monitoria</span></h:commandLink>
+         </h:form>
           <div class="mdl-layout-spacer"></div>
           <h:form prependId="false">
           <h:commandLink action="#{loginMBean.logOut()}"  class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" title="Sair do Sistema.">
